# lmkit

./: .gitignore  README.md  dev.ipynb  examples.ipynb  molecular.ipynb  pyproject.toml  setup.sh  test.ipynb  trained_bpe_tokenizer.json
lmkit/model/: caching.py  config.py  positional.py  sampler.py  trainer.py  transformer.py
lmkit/tools/: compat.py  data.py  stem.py  trainer.py
