[project]
name = "lmkit"
version = "0.1.0"
description = "hackable language modeling library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "optax>=0.2.4",
  "flax>=0.10.2",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.5",
  "matplotlib>=3.10.0",
  "numpy==2.1.3",
  "safetensors>=0.5.2",
  "huggingface-hub>=0.28.1",
  "tqdm>=4.67.1",
  "jax>=0.5.0",
  "array-record>=0.6.0",
  "python-dotenv>=1.0.1",
  "einops>=0.8.1",
  "tokenizers>=0.21.0",
  "protobuf>=6.30.1",
]

[project.optional-dependencies]
cuda = [
  "jax[cuda12_pip]",
]

[tool.uv.sources]
optax = { git = "https://github.com/google-deepmind/optax.git" }
